Update and rename myfirstwebsite.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Hello!
 This is my first website
 <br/>
 <br/>
-<p> <li><a href="file:///C:/Users/maxbo/Downloads/Neuer%20Ordner/websiteowner.html"> <font color="00CC33"> Website owner </font></a>
+<p> <li><a href="websiteowner.html"> <font color="00CC33"> Website owner </font></a>
 <br/>
 <br/>
 <br/>
