--- a/websiteowner.html
+++ b/websiteowner.html
@@ -9,4 +9,4 @@
 <br/>
 Hello
 <br/>
-I'm Max and i created <a href="file:///C:/Users/maxbo/Downloads/Neuer%20Ordner/myfirstwebsite.html"> <font color="00CC33"> this website </font></a>.
+I'm Max and i created <a href="index.html"> <font color="00CC33"> this website </font></a>.
