--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My first website</title
+    <title>Test website</title>
+    <link rel="stylesheet" href="style.css" />
+    <h1> Test website </h1>
+    <hr>
 </head>
-<body bgcolor=#006633>
-<h1> <font color="#00FF00"> My first website </font></h1>
-<hr <font color="#556B2F">
-Hello!
-<br/>
-This is my first website
-<br/>
-<br/>
-<p> <li><a href="websiteowner.html"> <font color="00CC33"> Website owner </font></a>
-<br/>
-<br/>
-<br/>
-<br/>
-<font color="669933"> This is a test website ⚠ </font>
+<body>
+    <br/>
+    Hello!
+    <br/>
+    This is a test website
+    <br/>
+    <br/>
+    <p> <li><a href="websiteowner.html"> Website owner </a>
+    <p> <li><a href="forwhat.html"> For what is this website? </a>
+    <br/> <br/> <br/> <br/>
+    <font color= "339900"> This is a test website ⚠ </font>
+    <br/> <br/> <br/>
+    v. 2.0
+</body>
+</html>
