--- a/websiteowner.html
+++ b/websiteowner.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My first website - website owner</title
+    <title>Test website - website owner</title>
+    <link rel="stylesheet" href="style.css" />
+    <h1> Test website - website owner </h1>
+    <hr>
 </head>
-<body bgcolor=#006633>
-<h1> <font color="#00FF00"> My first website - website owner </font></h1>
-<hr <font color="#556B2F">
-<br/>
-Hello
-<br/>
-I'm Max and i created <a href="index.html"> <font color="00CC33"> this website </font></a>.
+<body>
+    <br/>
+    Hello
+    <br/>
+    I'm Max and i created <a href="index.html"> this website </a>. <br/>
+    <p> <li><a href="index.html">Go back </a>
+    <br/> <br/> <br/> <br/>
+    v. 2.0
+</body>
+</html>
